chore(thesis): add setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
-.direnv
+**/*.aux
+**/*.bbl
+**/*.blg
+**/*.fdb*
+**/*.fls
+**/*.idx
+**/*.ilg
+**/*.ind
+**/*.lof
+**/*.log
+**/*.lol
+**/*.lot
+**/*.nlo
+**/*.out
+**/*.brf
+**/*.pdf
+**/*.nls
+**/*.toc
+**/*.dvi
+**/*.out.ps
+!**/assets/*.pdf
+**/*.synctex.gz
+**/*.synctex(busy)**
+**/.direnv
